LIMO-280: Fixed lineup substitutes display when name is too long

--- a/src/components/livescore/ls-match-lineup/_ls-match-lineup.scss
+++ b/src/components/livescore/ls-match-lineup/_ls-match-lineup.scss
@@ -292,15 +292,17 @@
 
       &__player-name {
         flex:1;
-        display: flex;
+        display: block;
         align-items: center;
         justify-content: space-between;
+        overflow: hidden;
 
         &:active {
           background-color: $ls-list-pressed-color;
         }
 
         a {
+          display: block;
           text-decoration: none;
           color: inherit ;
           font-weight: inherit;
@@ -309,12 +311,23 @@
           text-overflow: ellipsis;
           padding: 0 10px;
           flex: 1 0 auto;
+          float: right;
+          max-width: 100%;
+          box-sizing: border-box;
+        }
+
+        &.team1 {
+
+          a {
+            float: left;
+          }
         }
       }
 
       &__player-icons {
         flex: 0 1 auto;
         white-space: normal;
+        float: left;
         
         > span {
           margin-left: 2px;
@@ -324,8 +337,9 @@
 
       &.team1 {
 
-        .cell__player-icons{
+        .cell__player-icons {
           text-align: right;
+          float: right;
         }
       }
 
